# DevChatPro

./: .env  .gitignore  LICENSE  MVP-Guide.md  README.md  pyproject.toml
app/: main.py
app/api/auth/: auth_crypt.py  auth_models_schemas.py  auth_services.py  cryptographie.py  services.py  tokens.py
app/core/: config.py  database.py  exceptions.py  sqlite_database.db
app/static/css/: style.css
app/static/images/: info.txt
app/templates/: base.html  index.html  project_management.html
app/templates/auth/: login.html  test.html
